Fixed layout issues in HERO component.

--- a/client/app/hero/hero.scss
+++ b/client/app/hero/hero.scss
@@ -8,8 +8,9 @@
 
     position: absolute;
     top: 20%;
+    left: calc(50% - 77px);
 
-    //background-image: url("../img/KidC_beeldmerk.jpg");
+    background-image: url("../assets/images/KidC_beeldmerk.jpg");
     background-size: contain;
     width: 134px;
     height: 134px;
